// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Text /> correctly snapshot testing with bold text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    align="flex-start"
    isUnderlined={false}
    size="small"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Bold",
          "fontSize": 13,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="bold"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`Renders <Text /> correctly snapshot testing with regular text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    align="flex-start"
    isUnderlined={false}
    size="small"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 13,
          "textDecorationLine": "none",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`Renders <Text /> correctly snapshot testing with underlined text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    align="flex-start"
    isUnderlined={true}
    size="small"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "rgba(22, 47, 86, 0.87)",
          "fontFamily": "Lato-Regular",
          "fontSize": 13,
          "textDecorationLine": "underline",
        },
      ]
    }
    testID="ds-text"
    weight="regular"
  >
    Displaying some text
  </Text>
</View>
`;
